Finished TryJump information, adjust Lobby information, added BedWars (and Flash) information. Starting messaging. Changed project to UTF-8

--- a/build.gradle
+++ b/build.gradle
@@ -85,3 +85,5 @@ processResources
 runClient {
     jvmArgs "-Dfml.coreMods.load=net.labymod.core.asm.LabyModCoreMod","-DdebugMode=ALL","-Daddonresources=addon.json"
 }
+
+compileJava.options.encoding = 'UTF-8'
